Mon Jun 19 13:22:48 2006  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* ext/socket/socket.c (unix_sysaccept): typo fixed.

	* ext/socket/socket.c (sock_connect): remove an unused local
	  variable tmpaddr.

Mon Jun 19 02:10:32 2006  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* ext/socket/socket.c (tcp_accept_nonblock): forgot to remove
	  abandoned hacks.  [ruby-dev:28740]

Mon Jun 19 00:00:17 2006  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/multi-tk.rb: fix bug: initialize improper tables.

Sun Jun 18 20:28:43 2006  Masaki Suketa  <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c (fole_methods): The return value
	  of WIN32OLE#ole_methods should include PROPERTYPUTREF methods.

	* ext/win32ole/win32ole.c (fole_put_methods): The return value
	  of WIN32OLE#ole_put_methods should include PROPERTYPUTREF methods.

	* test/win32ole/test_ole_methods.rb: ditto.

	* ext/win32ole/win32ole.c (ole_propertyput): support
	  PROPERTYPUTREF. [ruby-talk:183042]

	* test/win32ole/test_propertyputref.rb : ditto.

Sat Jun 17 23:42:26 2006  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (Init_eval): add aliases invoke_method and
	  invoke_functional_method corresponding send and funcall
	  respectively.  [ruby-talk:197512]

	* parse.y (parser_yylex): returns the most typical keyword token
	  on EXPR_FNAME.  [ruby-core:7995]

	* ext/socket/socket.c: protoize.

Sat Jun 17 22:17:17 2006  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* lib/mathn.rb (Integer::prime_division): raise ZeroDivisionError
	  on zeros.  [ruby-dev:28739]

Sat Jun 17 14:53:32 2006  Tanaka Akira  <akr@m17n.org>

	* lib/pathname.rb (Kernel#Pathname): new method.

Sat Jun 17 02:01:00 2006  Tanaka Akira  <akr@m17n.org>

	* lib/pp.rb (Kernel#pretty_inspect): defined for pretty printed
	  string.

Fri Jun 16 01:41:00 2006  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (rb_proc_arity): get rid of segfault for mere splat.

	* gc.c (gc_mark_children): NODE_BLOCK_PASS needs u3 to be marked.
